# logind-idle-session-extras

./: CHANGELOG.md  README.md  pyproject.toml  requirements-rhel8.txt  requirements-rhel9.txt  requirements.txt  setup.py
src/: rules.json
src/logind_idle_session_extras/: getent.py  list_set.py  logind.py  main.py  model.py  ps.py  rules.py  ss.py  tty.py  x11.py
src/stop_idle_sessions/: logind.py  main.py  ps.py  ss.py  tty.py  x11.py
tests/: logind.py  test_getent.py  test_list_set.py  test_logind.py  test_main.py  test_ps.py  test_scenario1.py  test_scenario2.py  test_scenario3.py  test_ss.py  test_tty.py  test_x11.py
